--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   },
   "dependencies": {
     "framer-motion": "^12.23.24",
-    "next": "16.0.0",
+    "next": "^15.5.6",
     "next-auth": "^5.0.0-beta.29",
     "next-themes": "^0.4.6",
     "react": "19.2.0",
