--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@google/genai": "^1.29.1",
     "@neondatabase/serverless": "^1.0.2",
     "bcryptjs": "^3.0.2",
     "dotenv": "^17.2.3",
