--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@google/genai": "^1.29.1",
     "@neondatabase/serverless": "^1.0.2",
+    "@supabase/supabase-js": "^2.81.1",
     "bcryptjs": "^3.0.2",
     "dotenv": "^17.2.3",
     "framer-motion": "^12.23.24",
@@ -20,7 +21,8 @@
     "pg": "^8.16.3",
     "react": "19.2.0",
     "react-dom": "19.2.0",
-    "react-icons": "^5.5.0"
+    "react-icons": "^5.5.0",
+    "react-markdown": "^10.1.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
